  * Bump Standards-Version to 3.9.8.
  * Define QT_HOME to /usr/lib/<triplet>/qt5/ and drop qt5_build.patch.
    Thanks again to Sune Vuorela.
  * Update copyright file for new sources.
  * Don't install testkeys, as it no longer exists.
  * Don't try to cleanup rapidjson non-free bits that are now gone upstream.
  * Install manpages from new source location.

 -- Cesare Falco <c.falco@ubuntu.com>  Tue, 19 Apr 2016 12:32:27 +0200

mame (0.172-1) unstable; urgency=medium

  * New upstream release.
    - MAME is now licensed under the GPL-2
  * Move to main section.
  * Massive update of debian/copyright to adapt to licensing changes.
  * Add License paragraphs for all minor variants of BSD and custom licenses.
  * Update MESS references in mame-tools' description.
  * Update Build-Depends:
    - libportaudio-dev → portaudio19-dev
    - libqt4-dev → qtbase5-dev
  * Build against system sqlite3. Define USE_SYSTEM_LIB_SQLITE3=1 and
    add libsqlite3-dev to B-Ds.
  * Build against system lua5.3. Define USE_SYSTEM_LIB_LUA passing Debian's
    Lua5.3 path to the build system, and add liblua5.3-dev to B-Ds
    (lua-zlib and lua-filesystem still unsupported).
  * Add date_timestamp.patch: remove date of build, which is pointless and
    makes the binary non-reproducible.
  * Make the build verbose and remove obsolete define SDL_LIBVER.
  * Don't try to install web/* data in mame-data, it no longer exists.
  * Avoid installing LICENSE files for CC0-1.0.
  * Add some extra info to mame-tools' short description.
  * Use secure URLs for Vcs-* fields, and point to cgit instead of gitweb.
  * Remove mame.menu and install/mame.xpm.
  * Update Standards-Version to 3.9.7, no changes needed.
  * Add qt5_build.patch: add -qt5 parametres to all calls of moc and qmake.
    Patch by Sune Vuorela, thanks!
  * Remove non-free bits of rapidjson and all generated binaries and files
    from the orig tarball at get-orig-source rule to appease lintian.