@@ -154,10 +154,10 @@ override_dh_install:
 
 override_dh_fixperms-indep:
 	dh_fixperms
-	chmod 644 debian/mame-data/usr/share/games/mame/artwork/*
-	chmod 644 debian/mame-data/usr/share/games/mame/ctrlr/*
-	chmod 644 debian/mame-data/usr/share/games/mame/hash/*
-	chmod 644 debian/mame-data/usr/share/games/mame/keymaps/*
+	find debian/mame-data/usr/share/games/mame/artwork -type f -execdir chmod 644 {} \;
+	find debian/mame-data/usr/share/games/mame/ctrlr -type f -execdir chmod 644 {} \;
+	find debian/mame-data/usr/share/games/mame/hash -type f -execdir chmod 644 {} \;
+	find debian/mame-data/usr/share/games/mame/keymaps -type f -execdir chmod 644 {} \;
 
 
 # Retrieve source from svn repo (recommended by upstream developers)
