@@ -20,6 +20,8 @@ mame (0.173-1) UNRELEASED; urgency=medium
   * Don't install testkeys, as it no longer exists.
   * Don't try to cleanup rapidjson non-free bits that are now gone upstream.
   * Install manpages from new source location.
+  * Don't chmod data dirs unconditionally, use `find -type f` instead to
+    avoid installing dirs with wrong perms.
 
  -- Cesare Falco <c.falco@ubuntu.com>  Tue, 19 Apr 2016 12:32:27 +0200
 
